@@ -722,12 +722,14 @@ public:
     // True if a button is down and the mouse is moving
     bool Dragging() const
     {
-        return ((m_eventType == wxEVT_MOTION) &&
-                (LeftIsDown() || MiddleIsDown() || RightIsDown()));
+        return (m_eventType == wxEVT_MOTION) && ButtonDown(wxMOUSE_BTN_ANY);
     }
 
     // True if the mouse is moving, and no button is down
-    bool Moving() const { return (m_eventType == wxEVT_MOTION); }
+    bool Moving() const
+    {
+        return (m_eventType == wxEVT_MOTION) && !ButtonDown(wxMOUSE_BTN_ANY);
+    }
 
     // True if the mouse is just entering the window
     bool Entering() const { return (m_eventType == wxEVT_ENTER_WINDOW); }
